fix: Remove role